# pov_ws

./: .gitignore  README.md  alias.sh  dumpstack.sh  env.sh  mav_0_1.parm
.devcontainer/: Dockerfile  Dockerfile.dev  Dockerfile.humble.dev  Dockerfile.humble_nvidia  Dockerfile.jazzy  Dockerfile.runtime  READMD.md  devcontainer.json  requirements.txt
.devcontainer/tbd/: Dockerfile.jazzy.dev
apm/lua/: servo2rc.lua
apm/ver47/: skid_steer_viso.params
qgc/: readme.md
qgc/CustomActions/: actions.json
src/pov_application/: CMakeLists.txt  package.xml
src/pov_application/pov_application/: aruco_node.py  ekf_status.py  interactive_marker_cmd_vel.py  mav_node.py  mavlink.py  noise_odom.py  odom_node.py  odom_to_position.py  odom_to_velocity.py  pov_node.py  stream_node.py  tf_usage.py  world_box_tf.py
src/pov_application/scripts/: arcuo.py  camera_move.py  detect.py  g1.py  pygame_keyboard.py  quat2eulr.py  quatmulti.py  sphare_utils.py  test.py  vector.py  z-rotate.py
src/pov_application/scripts/aruco/: detect.py  gen.py  pose.py
src/pov_bringup/: CMakeLists.txt  README.md  package.xml
src/pov_bringup/config/: bridge.yaml  bridge_diff.yaml  mavros_apm.yaml  mavros_plugins.yaml  robot_localiztion_params.yaml  rover-acc.param  rviz_imu.rviz  rviz_odom.rviz
src/pov_bringup/launch/: demo_imu.launch.py  pov_mavros.launch.py  sitl.sh
src/pov_bringup/tmux/: aruco.yaml  dev.yaml  diff.yaml
src/pov_description/: CMakeLists.txt  package.xml
src/pov_description/models/arcuo/: model.config  model.sdf
src/pov_description/models/aruco_box1/: model.config  model.sdf
src/pov_description/models/asphalt_plane/: model.sdf
src/pov_description/models/asphalt_plane/materials/scripts/: asphalt.material
src/pov_description/models/mars/: model.config  model.sdf
src/pov_description/models/r1_rover/: model.sdf
src/pov_description/models/rover/: rover.sdf
src/pov_gazebo/: CMakeLists.txt  package.xml
src/pov_gazebo/include/pov_gazebo/: SocketUDP.hh
src/pov_gazebo/scripts/: README.md  gen_aruco_dae.py  hello.py  service.py
src/pov_gazebo/src/: ArduPilotPlugin.cc  MinimalModelPlugin.cc  README.md
src/pov_gazebo/worlds/: aruco.sdf  baylands.world  diffdrive.world  empty.world  marsyard2022.sdf  r1_rover_runway.sdf  rover.sdf  sky.sdf  sonoma_raceway.world
src/pov_gazebo/worlds/sensors/: camera.sdf  imu.sdf  imu_noise.sdf  joint_position.sdf  odometry_publisher.sdf
src/pov_gazebo/worlds/two_wheel/: 02_moving_robot.sdf  03_moving_robot_with_odom.sdf  04_diff_with_topic_viewer.sdf  05_diff_with_pose.sdf  apply_joint_force.sdf  empty.sdf
temp/: marker_info.yml
tmp/: marker_info.yml
